Bug 286875 - Redirected email is stored in wrong sent-folder
Summary: Redirected email is stored in wrong sent-folder
Status: CLOSED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: 4.7
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-17 20:09 UTC by Andreas Pietzowski
Modified: 2014-04-20 08:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Pietzowski 2011-11-17 20:09:06 UTC
Version:           4.7 (using KDE 4.7.3) 
OS:                Linux

When I redirect an email (hotkey "e") I want to send the same mail again to another guy. In that case I also expect the redirected mail to be stored in the same sent-mail folder.

I tried that on an email in an IMAP account but the redirected mail was stored on the "Local folders"'s sent-mail folder.

Reproducible: Didn't try

Steps to Reproduce:
Redirect an email from an IMAP account and send it to some address.

Actual Results:  
The sent mail will be stored under "Local folders" -> sent-mail

Expected Results:  
The redirected email should be stored next to the original sent mail in the IMAP-sent-mail folder

I havent tried it with POP3 accounts but I guess it's more a problem of the general redirect-source-code.
Comment 1 Laurent Montel 2011-11-18 06:58:15 UTC
you have a sent folder specific for your imap ?
Comment 2 Laurent Montel 2011-11-18 15:04:20 UTC
Git commit 595a426cc55121ff0b2be777fa477eb85fd0d478 by Montel Laurent.
Committed on 18/11/2011 at 16:03.
Pushed by mlaurent into branch 'master'.

Fix Bug 286875 - Redirected email is stored in wrong sent-folder

FIXED-IN: 4.7.4
BUG: 286875

M  +22   -1    kmail/kmcommands.cpp
M  +1    -1    mailfilteragent/filtermanager.cpp
M  +13   -1    messagecomposer/messagefactory.cpp
M  +1    -1    messagecomposer/messagefactory.h

http://commits.kde.org/kdepim/595a426cc55121ff0b2be777fa477eb85fd0d478
Comment 3 Laurent Montel 2011-11-18 15:06:32 UTC
Git commit 1d6db67c0fa9eb9fda663996744b273ed08d3650 by Montel Laurent.
Committed on 18/11/2011 at 16:03.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 286875 - Redirected email is stored in wrong sent-folder

FIXED-IN: 4.7.4
BUG: 286875
(cherry picked from commit 595a426cc55121ff0b2be777fa477eb85fd0d478)

Conflicts:

	mailfilteragent/filtermanager.cpp

M  +22   -1    kmail/kmcommands.cpp
M  +13   -1    messagecomposer/messagefactory.cpp
M  +1    -1    messagecomposer/messagefactory.h

http://commits.kde.org/kdepim/1d6db67c0fa9eb9fda663996744b273ed08d3650