Fix Bug 286875 - Redirected email is stored in wrong sent-folder

FIXED-IN: 4.7.4
BUG: 286875
(cherry picked from commit 595a426cc55121ff0b2be777fa477eb85fd0d478)

Conflicts:

	mailfilteragent/filtermanager.cpp